# obd-dashboard

./: CMakeLists.txt  README.md  main.cpp
simulator/: CMakeLists.txt  obd_simulator.cpp
src/: bluetooth.cpp  bluetooth.h  dashboard.cpp  dashboard.h  obd.cpp  obd.h
